--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <%= render 'home/sections/description' %>
 <%= render 'home/sections/intro2018' %>
 
-<%#= render 'home/sections/details' %>
+<%= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
 <!-- <hr style="max-width: inherit"> -->
 <%#= render 'home/sections/application2' %>
