--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -4,7 +4,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
           <!-- WHAT WILL TAKE PLACE? -->
-          PERFORMANCES
+          CONCERTS
         </h2>
         <hr class="primary">
       </div>
@@ -15,7 +15,7 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
           <!-- While most of this will be determined by the Artists, we do have a few 'fixed points' during the festival. Namely, three performances at Washington Street Gallery: -->
-          There will be three performances at Washington Street Gallery
+          There will be three performances at, or around, Washington Street Gallery
         </p>
       </div>
     </div>
@@ -23,50 +23,174 @@
   <br />
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+      <div class="col-lg-12 col-md-12 col-sm-12 text-center pad-15-bot">
         <div class="title">
           <h4>
-            Welcome to Boston
+            Welcome Concert
           </h4>
         </div>
         <div class="date">
           <h5>
-            Tuesday January 24th, 8 PM
+            Friday, January 19th, 7PM - 9PM
           </h5>
         </div>
         <div class="text">
-          This show will feature two new works by Boston-based experimental artists Morgan Evans-Weiler (new piece), Michael Rosenstein & Jesse Collins (new piece), and one by co-incidence Resident Artist Michael Pisaro.
+          This outdoor concert will feature Boston-based composers and span from the square and lead up to and inside of Washington Street. There will be overlapping performances and pieces by: Marilyn Arsem, Sarah Pitan, Jennie Gottschalk, and Joachim Eckl. Bring warm clothes!
+        </div>
+        <br />
+        <a class="fbLinkMeow" href="https://www.facebook.com/events/618957238279409/" target="_blank">
+          Facebook Event
+        </a>
+        <br />
+        <br />
+        <ul class="eventUl">
+          <li>
+            <p class="eventWhen">
+              (Arrive at ~7 PM, at Union Square, Somerville)
+            </p>
+          </li>
+        </ul>
+        </br>
+
+        <div class="col-md-3 col-sm-3 col-xs-12 eventUl">
+          <p class="eventWhen">
+            715 - 815
+          </p>
+          <p class="eventDescription">
+            "sound bridges", by Joachim Eckl (performed by Luke Martin & Aaron Foster Breilyn).
+          </p>
+          <p class="eventWhere">
+            [Union Sq at the big intersection of Webster, Somerville, and Washington St., near India Palace].
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 eventUl">
+          <p class="eventWhen">
+            730 - 830
+          </p>
+          <p class="eventDescription">
+            new work, by Marilyn Arsem
+          </p>
+          <p class="eventWhere">
+            [Along Washington Street, toward Washington Street Art Center. Past Juliet and nearer to Hawkins St.]
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 eventUl">
+          <p class="eventWhen">
+            745 - 845
+          </p>
+          <p class="eventDescription">
+            new work, by Sarah Pitan
+          </p>
+          <p class="eventWhere">
+            [Further along Washington Street and toward the parking lot of Washington Street Art Center]
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 eventUl">
+          <p class="eventWhen">
+            8 - 9
+          </p>
+          <p class="eventDescription">
+            new work, by Jennie Gottschalk
+          </p>
+          <p class="eventWhere">
+            [INSIDE Washington Street Art Center]
+          </p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+
+      <hr class="eventHr"/>
+
+      <div class="col-lg-12 col-md-12 col-sm-12 text-center pad-15-bot">
         <div class="title">
           <h4>
-            Once Far, Now Hear
+            Sound Bridges (Joachim Eckl)
           </h4>
         </div>
         <div class="date">
           <h5>
-            Friday January 27th, 8 PM
+            January 19-25, 2018
+            <br />
+            One hour per day
           </h5>
         </div>
         <div class="text">
-          This will feature (six) solo pieces/sets by all of the co-incidence Guest Artists. While we will get to know one another, and the local community, through other means throughout the festival, this provides a uniquely personal way to understand and be in contact with the co-incidence artists.
+          The Co-Incidence Festival will present a new public installation/performance work, composed by Austrian artist Joachim Eckl, in Union Square. Entitled “Sound Bridges,” this work will occur for one hour each day, for seven consecutive days in Union Square. A mixture of Co-Incidence and local artists will perform the piece.
+          <br />
+          <br />
+          “Sound Bridges” is based on interdependence, warmth, and consciousness. Personal inner spaces function as bridge-building locations and these inner connections are offered in a living process reaching out to others through space and time. There will be a central point or 'listening circle' established in a central location in Union Square. Performers will pair up in duos and spread out throughout the square. These duos will establish 'sound bridges' across the square and intersecting the central point by making (i.e., drones, singing, percussive sounds; anything one can imagine). The sounds are to be ‘as quiet as possible and as loud as necessary’. Performers must stay in connection with one another and build a strong sound-bridge; this relationship is then woven in with the other duos (increasing by one each day) making sound-bridges across the square. Thus it is an open-source sound-textile, woven together through social connection, into the sounds of the Square itself, and ever-changing.
+          <br />
+          <br />
+          This event is supported in part by the Somerville Arts Council.
+        </div>
+        <br />
+        <a href="https://www.facebook.com/events/544336682617294/" target="_blank">
+          Facebook Event
+        </a>
+        <br />
+        <br />
+        <div class="eventUl joachimList">
+          <div class="joachimDates">
+            Friday, January 19th,
+            <br />
+            715PM - 815PM
+          </div>
+          <div class="joachimDates">
+            Saturday, January 21st,
+            <br />
+            615PM - 715PM
+          </div>
+          <div class="joachimDates">
+            Sunday, January 21st,
+            <br />
+            815PM - 915PM
+          </div>
+          <div class="joachimDates">
+            Monday, January 22st,
+            <br />
+            515PM - 615PM
+          </div>
+        </div>
+        <div class="eventUl joachimList">
+          <div class="joachimDates">
+            Tuesday, January 23st,
+            <br />
+            915PM - 1015PM
+          </div>
+          <div class="joachimDates">
+            Wednesday, January 24th,
+            <br />
+            415PM - 515PM
+          </div>
+          <div class="joachimDates">
+            Thursday, January 23st,
+            <br />
+            1015PM - 1115PM
+          </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+      <br />
+      <hr class="eventHr" />
+
+      <div class="col-lg-12 col-md-12 col-sm-12 text-center">
         <div class="title">
           <h4>
-            From Sunrise until Completion
+            Finale
           </h4>
         </div>
         <div class="date">
           <h5>
-            Sunday January 29th, Sunrise (~6 AM)
+            Saturday, January 27th, 7PM
           </h5>
         </div>
         <div class="text">
-          This show will last from sunrise until completion and feature new works by the Guest Artists and Resident Artist, performed by the co-incidence ensemble (Guest Artists and Resident Artist, and Directors). These works will have been workshopped and critiqued throughout the week. Breakfast, Lunch, and Dinner will be provided at Washington Street Gallery during the show.
+          To celebrate the conclusion of the Festival, we will have a potluck dinner at Washington Street Art Center. Feel free to bring things; we will provide some stuff as well.
+          <br />
+          Performances of pieces that have been composed or worked on during the week may or may not be happening during this event.
         </div>
+        <br />
+        <a href="https://www.facebook.com/events/2002736213294581/" target="_blank">
+          Facebook Event
+        </a>
       </div>
     </div>
   </div>
@@ -83,7 +207,7 @@
   </div>
   <br />
   <br /> -->
-  <div class="container">
+ <!--  <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
@@ -91,5 +215,5 @@
         </p>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
