new image and copy changes

--- a/app/assets/stylesheets/creative.scss
+++ b/app/assets/stylesheets/creative.scss
@@ -188,7 +188,8 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: asset_url("header.jpg");
+  // background-image: asset_url("header.jpg");
+  background-image: asset_url("joachim-sky.jpg");
   text-align: center;
   color: white;
 }
