--- a/app/views/home/sections/_hero.html.erb
+++ b/app/views/home/sections/_hero.html.erb
@@ -5,7 +5,7 @@
         (the) co-incidence festival
       </h1>
       </hr>
-      <p>
+      <p id="homeSubHeader">
         an experimental music gathering in Somerville, MA
       </p>
     </div>
