--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -210,5 +210,14 @@ h5 {
   display: flex;
   justify-content: space-around;
   padding-bottom: 15px;
-  
+
+}
+
+#homeHeading {
+  text-shadow: 1px 1px 2px rgba(123, 129, 142, .1), 0 0 15px rgba(123, 129, 142, .1), 0 0 5px rgba(123, 129, 142, .1);
+  // text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1)
+}
+
+#homeSubHeader {
+  text-shadow: 1px 1px 2px rgba(123, 129, 142, .2), 0 0 15px rgba(123, 129, 142, .2), 0 0 5px rgba(123, 129, 142, .2);
 }
