quick edits and adds the eckl score

--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -15,7 +15,17 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
           <!-- While most of this will be determined by the Artists, we do have a few 'fixed points' during the festival. Namely, three performances at Washington Street Gallery: -->
-          There will be three performances at, or around, Washington Street Gallery
+          There will be three performances at, or around, Washington Street Gallery: <br />321 Washington St, Somerville
+        </p>
+      </div>
+    </div>
+  </div>
+  <br />
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <p>
+          People are welcome to join us at any point during the week for discussions, rehearsals, performances, etc. Keep an eye out for last-minute announcements of events happening at WSAC throughout the week. Hope to see you there!
         </p>
       </div>
     </div>
@@ -126,6 +136,10 @@
         <a href="https://www.facebook.com/events/544336682617294/" target="_blank">
           Facebook Event
         </a>
+        || 
+        <a href="https://docs.google.com/document/d/16_1ALMg2HloWLsQgYGFHkdDJZbDUfwFlK5TOiK1VCnM/edit?usp=sharing" target="_blank">
+          Score
+        </a>
         <br />
         <br />
         <div class="eventUl joachimList">
@@ -183,7 +197,7 @@
           </h5>
         </div>
         <div class="text">
-          To celebrate the conclusion of the Festival, we will have a potluck dinner at Washington Street Art Center. Feel free to bring things; we will provide some stuff as well.
+          To celebrate the conclusion of the Festival, we will have a potluck dinner at Washington Street Art Center. feel free to bring food/drink; we will have some as well.
           <br />
           Performances of pieces that have been composed or worked on during the week may or may not be happening during this event.
         </div>
