--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -13,9 +13,7 @@
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/bcc.jpg") %>
         </div>
-        <div class="business-logo">
-          <%= image_tag asset_url("business-logos/mcc-logo.jpg") %>
-        </div>
+        
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/cafefixe.png") %>
         </div>
@@ -24,6 +22,9 @@
         </div>
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
+        </div>
+        <div class="business-logo">
+          <%= image_tag asset_url("MCC_Logo.png") %>
         </div>
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/streetcarlogo.png") %>
