--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -29,6 +29,10 @@
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/streetcarlogo.png") %>
         </div>
+        <div class="business-logo">
+          <%= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
+            
+        </div>
       </div>
     </div>
   </div>
