add google calendar

--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -27,6 +27,11 @@
         <p>
           People are welcome to join us at any point during the week for discussions, rehearsals, performances, etc. Keep an eye out for last-minute announcements of events happening at WSAC throughout the week. Hope to see you there!
         </p>
+        <br />
+        <p>
+          For the most updated calendar please click 
+          <%= link_to('here', 'https://calendar.google.com/calendar/b/2/r?cid=Y29pbmNpZGVuY2UuZmVzdGl2YWxAZ21haWwuY29t', :target => "_blank") %>.
+        </p>
       </div>
     </div>
   </div>
