--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -125,7 +125,7 @@
           <h5>
             January 19-25, 2018
             <br />
-            One hour per day
+            One hour per day || Union Square, directly outside of The Independent by WWI memorial
           </h5>
         </div>
         <div class="text">
