--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,13 @@
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
-<%= render 'home/sections/intro2018' %>
+<%= render 'home/sections/intro2019' %>
 
-<%= render 'home/sections/details' %>
+<%#= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
 <!-- <hr style="max-width: inherit"> -->
 <%#= render 'home/sections/application2' %>
 
-<%= render 'home/sections/guest_artists_2018' %>
+<%#= render 'home/sections/guest_artists_2018' %>
 <%#= render 'home/sections/who' %>
 
 <%= render 'home/sections/about' %>
