--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -221,3 +221,11 @@ h5 {
 #homeSubHeader {
   text-shadow: 1px 1px 2px rgba(123, 129, 142, .2), 0 0 15px rgba(123, 129, 142, .2), 0 0 5px rgba(123, 129, 142, .2);
 }
+
+#partners {
+  /*background-color: #337ab7;*/
+}
+
+#intro2019 {
+  padding-bottom: 0;
+}
