--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -26,13 +26,11 @@
         </p> -->
 
         <p class="text-faded">
-          If you have any questions, please email us at: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a>.
+          If you have any questions, please email us at: <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a>.
         </p>
         <br />
         <p class="text-faded">
-          <a href="/2017-season">
-            Check out some media from our 2017 season.
-          </a>
+            Check out some media from our <a href="/2017-season">2017</a> or <a href="/2018-season">2018</a> season.
         </p>
         
       </div>
