--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -69,21 +69,15 @@
             Resident Artist
           </h4>
           <div class="details-pic">
-            <%= image_tag asset_url("joachim.jpg") %>
+            <%= image_tag asset_url("sarah-pic.png") %>
           </div>
           <p class="text-muted partner-link">
-            <a href="/joachim">
-              Joachim Eckl
+            <a href="https://e4773098889037.tumblr.com/" target="_blank">
+              Sarah Ayotomiwa Pitan
             </a>
           </p>
           <p>
-            Based in Austria, Joachim Eckl was brought up in Haslach on the Große Mühl river. Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water also plays a central role in this work: he understands and uses it as basic element of human interaction. Eckl currently works as a freelance artist under the label HEIM.ART® and runs “Die Station—Neufelden”, a former warehouse on the Große Mühl, as an art space.
-          </p>
-          --
-          <p>
-            <a href="/joachim">
-              Read More
-            </a>
+            Sarah Pitan is a young American artist. She is a first-generation Nigerian-American who was born in raised in Boston. She has backgrounds in sports, dance, and visual arts, all of which indirectly inform her current artistic work. Her education in piano performance and music composition at the Rivers School Conservatory and the Boston Conservatory directly inform her work. However, her current practice involves an intensive conceptual abstraction from the aforementioned disciplines, which are under attack. She refers to her work as manipulative, improvisational, accelerative, or abductive writing. In this way, Pitan experiments with concepts originating in post-Kantian ontology. Along with this, concepts developed in formal logic, set theory, and minimalism influence her work. The bulk of Pitan’s work exists in writing : notes, transcriptions, and scores. Her work attempts to deterritorialize the stage and reappropriate a critical method of performance. She currently resides in Brooklyn.
           </p>
           <!--
           <p>
