--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
           <a class="page-scroll" href="/home/#application">APPLICATION</a>
         </li> -->
         <li>
-          <a class="page-scroll" href="/home/#intro2018">2018 SEASON</a>
+          <a class="page-scroll" href="2018-season">2018 SEASON</a>
         </li>
         <li>
           <a class="" href="2017-season">2017 SEASON</a>
