--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -69,7 +69,7 @@
             Resident Artist
           </h4>
           <div class="details-pic">
-            <%= image_tag asset_url("sarah-pic.png") %>
+            <%= image_tag asset_url("unnamed.jpg") %>
           </div>
           <p class="text-muted partner-link">
             <a href="https://e4773098889037.tumblr.com/" target="_blank">
