Changes hero image

--- a/app/assets/stylesheets/creative.scss
+++ b/app/assets/stylesheets/creative.scss
@@ -189,7 +189,8 @@ header {
   -o-background-size: cover;
   background-position: center;
   // background-image: asset_url("header.jpg");
-  background-image: asset_url("joachim-sky.jpg");
+  // background-image: asset_url("joachim-sky.jpg");
+  background-image: asset_url("sarah-pic.png");
   text-align: center;
   color: white;
 }
