--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -197,7 +197,7 @@
             <%= image_tag asset_url("SPitan.jpg")%>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link hide">
           <h4>
             <%= link_to("Sarah Pitan", "http://e47730988.tumblr.com/", :target => "_blank" ) %>
           </h4>
