--- a/app/views/home/sections/_intro2018.html.erb
+++ b/app/views/home/sections/_intro2018.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          OUR 2018 SEASON!
+          OUR 2018 SEASON
         </h2>
         <hr class="primary">
       </div>
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
-        <p class="">
+        <!-- <p class="">
           The third season of the `co-incidence festival` took place from  January 19—28, 2018, at Washington Street Art Center. Performances took place throughout the week in Union Square, Somerville, as part of the Somerville Arts Council's ArtsUnion program. As with the prior year, the overarching goal of the festival was to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2018, this lasted 8 full days (not including arrival and departure days). The festival was directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <p>
@@ -21,7 +21,28 @@
         </p>
         <p>
           We were extremely pleased to have interdisciplinary artist / ‘social engineer’ <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">Joachim Eckl</a> as our Resident Artist for 2018 to bring his important perspective and artistic focus to the festival.
+        </p> -->
+
+        <p class="">
+          The third season of the `co-incidence festival` took place from  January 19—28, 2018, mainly located at Washington Street Art Center. Throughout the week, performances called 'Sound Bridges' took place in Union Square as part of the Somerville Arts Council's ArtsUnion program. As with the prior year, the overarching goal of the festival was to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance - this time with more of a focus on exploring the local area.
         </p>
+        <p>
+          The daily routine was shifted from rehearsals towards expeditions, events, and meetings decided upon by the group. The only pre-planned things temporally were one hour Sound Bridges performances in Union Square, which ranged from 4 PM to 10 PM. The content of these performances was developed by different artists who attended the Festival, with Joachim's addition of a short period of focused group listening at the end of each performance. Given the unusual and changing concert times, the freedom during the day encouraged participants to get to know one another outside of the daily meeting space. 
+        </p>
+        <p>
+          Guest Artist, Joachim Eckl, was a large inspiration for the direction of this year's festival: primarily focused on how the groups sociality could exist and move through states of bridging, swarming, and into social sculpture, all explored through experimental sonic situations. He not only helped come up with the idea for the daily concerts, but also encouraged more spontaneous activities, for example, leading the group on a tour of the Museum of Fine Arts Boston's Egyptian Art exhibit.
+        </p>
+        <br />
+        <p>
+        
+          Please checkout a 2018 recap video made by <a href="https://www.facebook.com/scatv/videos/1650826261621155/?q=the%20co-incidence%20festival" target="_blank">Somerville Community Access Television 
+        </a>
+        <br />
+        <br />
+          And a writeup by the <a href="http://www.thesomervilletimes.com/archives/81444" target="_blank">Somerville Times
+        </a>
+      </p>
+
         <!-- <br />
         <hr class="tertiary">
         <br />
