--- a/app/views/home/season2017.html.erb
+++ b/app/views/home/season2017.html.erb
@@ -1,3 +1,3 @@
 <%= render 'home/sections/intro2017' %>
 <%= render 'home/sections/guest_artists' %>
-<%= render 'home/sections/who' %>
+<%= render 'home/sections/who2017' %>
