--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -10,7 +10,7 @@
         </p>
         <hr class="light">
         <p class="text-faded">
-          This project is based on an expanded view of what constitutes art, music, and the traditional concert. Following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a festival curated as ‘social sculpture.’ Reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. There will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty.
+          this project is based on an expanded view of what constitutes art, music, and the traditional concert. following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a festival curated as ‘social sculpture.’ reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. there will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty.
         </p>
         <br />
         <!-- <p class="text-faded">
@@ -26,11 +26,11 @@
         </p> -->
 
         <p class="text-faded">
-          If you have any questions, please email us at: <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a>.
+          if you have any questions, please email us at: <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a>.
         </p>
         <br />
         <p class="text-faded">
-            Check out some media from our <a href="/2017-season">2017</a> or <a href="/2018-season">2018</a> season.
+            check out some media from our <a href="/2017-season">2017</a> or <a href="/2018-season">2018</a> season.
         </p>
         
       </div>
