--- a/app/views/home/sections/_intro2018.html.erb
+++ b/app/views/home/sections/_intro2018.html.erb
@@ -24,22 +24,22 @@
         </p> -->
 
         <p class="">
-          The third season of the `co-incidence festival` took place from  January 19—28, 2018, mainly located at Washington Street Art Center. Throughout the week, performances called 'Sound Bridges' took place in Union Square as part of the Somerville Arts Council's ArtsUnion program. As with the prior year, the overarching goal of the festival was to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance - this time with more of a focus on exploring the local area.
+          the second season of the `co-incidence festival` took place from  January 19—28, 2018, mainly located at Washington Street Art Center. throughout the week, performances called 'Sound Bridges' took place in Union Square as part of the Somerville Arts Council's ArtsUnion program. as with the prior year, the overarching goal of the festival was to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance - this time with more of a focus on exploring the local area.
         </p>
         <p>
-          The daily routine was shifted from rehearsals towards expeditions, events, and meetings decided upon by the group. The only pre-planned things temporally were one hour Sound Bridges performances in Union Square, which ranged from 4 PM to 10 PM. The content of these performances was developed by different artists who attended the Festival, with Joachim's addition of a short period of focused group listening at the end of each performance. Given the unusual and changing concert times, the freedom during the day encouraged participants to get to know one another outside of the daily meeting space. 
+          the daily routine was shifted from rehearsals towards expeditions, events, and meetings decided upon by the group. the only pre-planned things temporally were one hour Sound Bridges performances in Union Square, which ranged from 4 PM to 10 PM. the content of these performances was developed by different artists who attended the festival, with Joachim's addition of a short period of focused group listening at the end of each performance. given the unusual and changing concert times, the freedom during the day encouraged participants to get to know one another outside of the daily meeting space. 
         </p>
         <p>
-          Guest Artist, Joachim Eckl, was a large inspiration for the direction of this year's festival: primarily focused on how the groups sociality could exist and move through states of bridging, swarming, and into social sculpture, all explored through experimental sonic situations. He not only helped come up with the idea for the daily concerts, but also encouraged more spontaneous activities, for example, leading the group on a tour of the Museum of Fine Arts Boston's Egyptian Art exhibit.
+          guest artist, Joachim Eckl, was a large inspiration for the direction of this year's festival: primarily focused on how the groups sociality could exist and move through states of bridging, swarming, and into social sculpture, all explored through experimental sonic situations. he not only helped come up with the idea for the daily concerts, but also encouraged more spontaneous activities, for example, leading the group on a tour of the Museum of Fine Arts Boston's Egyptian Art exhibit.
         </p>
         <br />
         <p>
         
-          Please checkout a 2018 recap video made by <a href="https://www.facebook.com/scatv/videos/1650826261621155/?q=the%20co-incidence%20festival" target="_blank">Somerville Community Access Television 
+          please checkout a 2018 recap video made by <a href="https://www.facebook.com/scatv/videos/1650826261621155/?q=the%20co-incidence%20festival" target="_blank">Somerville Community Access Television 
         </a>
         <br />
         <br />
-          And a writeup by the <a href="http://www.thesomervilletimes.com/archives/81444" target="_blank">Somerville Times
+          and a writeup by the <a href="http://www.thesomervilletimes.com/archives/81444" target="_blank">Somerville Times
         </a>
       </p>
 
