--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -7,7 +7,7 @@
         </h2>
         <hr class="primary">
         <p>
-          Over coffee in Maine in the Summer of 2015,
+          over coffee in Maine in the Summer of 2015,
           <span>
             <a href="http://www.lukecmartin.com/" target="_blank">
               Luke
@@ -15,14 +15,14 @@
           </span>
           and
           <span>
-            <a href="https://soundcloud.com/aaronfosterbresley" target="_blank">
+            <a href="https://soundcloud.com/aaronfosterbreilyn" target="_blank">
               Aaron
             </a>
           </span>
-           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with the co-incidence festival which kicked off its first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
+           had a far too grandiose idea: "let's do our own music festival!" (un)fortunately, they don't know when to stop. and here we are, with the co-incidence festival which kicked off its first season in January 2017. we wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
            <br />
            <br />
-           You can check out our article in the
+           you can check out our article in the
             <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools" target="_blank">
               Boston Globe here
             </a>
@@ -30,7 +30,7 @@
         </p>
         <br />
         <p>
-          If you would like to support <i> co-incidence </i> please donate to <a href="http://nonevent.org/membership/" target="_blank"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
+          if you would like to support <i> co-incidence </i> please donate to <a href="http://nonevent.org/membership/" target="_blank"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
         </p>
         <br />
         <br />
@@ -39,7 +39,7 @@
       
       <div class="col-lg-4 col-lg-offset-4 text-center">
         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-        <p>Please feel free to reach out: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a></p>
+        <p>please feel free to reach out: <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a></p>
       </div>
     </div>
   </div>
