--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -13,16 +13,52 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
+        <h3 class="fugu-h3">
+          INTRODUCTION
+        </h3>
+        <br />
         <p class="">
-          The third season of the `co-incidence festival` will take place from January 11—20, 2019, at Washington Street Art Center. Performances will take place throughout the week in Union Square, Somerville, as part of the Somerville Arts Council's ArtsUnion program. As with last year, the overarching goal of the festival is to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2019, this will last 8 full days (not including arrival and departure days). The festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
+          the third season of the co-incidence festival will take place from January 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past two years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, this will last 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <p>
-          Though we have general conceptual areas that we would like to explore during the festival, we are open (and eager) to expand from there and allow the attending artists' constellations of concepts to influence the direction of the festival.
+          though there are conceptual areas of exploration that are common between iterations of the festival, the attending artists (both guest and resident) are encouraged to influence and even drastically alter the direction and activities of the festival. this year topics of focus will include  conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. 
         </p>
         <p>
-          We are extremely pleased to announce that <a href="https://e4773098889037.tumblr.com/" target="_blank">Sarah Ayotomiwa Pitan</a> will be our Resident Artist for 2019. This position was held by Michael Pisaro in 2017, Joachim Eckl in 2018, and we could not be more excited to bring yet another important perspective and artistic focus to the festival.
+          the festival is structured such that we invite one resident artist each year and choose a small number of guest artists via international application. co-directors aaron and luke participate as well, as guest artists, throughout the week. the festival is also entirely open to the local community to participate; in other words, any member of the community (far or near) may join the invited artists and participate to any degree they would like: from joining each day to only attending concerts. we will reach out to people via email, social media (<a href="https://www.facebook.com/coincidencefestival/" target="_blank">FB</a>, <a href="https://coincidencefestival.tumblr.com/" target="_blank">tumblr</a>), posters, word of mouth, etc.
+        </p>
+        <p>
+          we are extremely pleased to announce that <a href="https://e4773098889037.tumblr.com/" target="_blank">Sarah Ayotomiwa Pitan</a> will be our Resident Artist for 2019. this position was held by Joachim Eckl in 2018 and Michael Pisaro in 2017, and we expect Sarah to contribute to another important perspective and artistic focus to the festival. this time around, we will work to achieve a structure that is articulate enough to guarantee integrity in the quality of the festival’s events but is highly sensitive to the group, in order to promote spontaneity. our project is the task of collectively developing and maintaining a work ethic that is durable, but malleable, for further use. 
         </p>
         <br />
+        <h3 class="fugu-h3">
+          festival activities / application
+        </h3>
+        <br />
+        <p>
+          co-incidence will occur at Washington Street Art Center (WSAC) in Somerville, MA. the space will serve as a meeting place for discussion, workshop, performance, and a hot pot of coffee. activities may take place at WSAC (which also serves as an experimental music venue in Boston), though they are not limited to that space. in fact, we encourage activities that may occur anywhere in the city / Somerville / greater Boston area, be entirely based on the potential of their occurrence, and/or may not even be perceptible.
+        </p>
+        <p>
+          this year, the festival will follow a set of maps that score the flow of concepts and events, by way of nomadic movement through the structure of the residency. only certain major meeting points (arrival, departure, a couple pre-scheduled concerts) will be predetermined. the structure of the festival will be centered on daily conversations led by Sarah, and other impromptu events as they are determined collectively, by the group. last year, such impromptu events or activities included Ryoko making lunch for/with us at luke’s apartment, having Joachim lead us on a tour of the Museum of Fine Arts, and so on. 
+        </p>
+        <p>
+          these are open and everyday situations; practices of being together. in preparation for our daily conversations, Sarah will present a toolbox of (~3) readings that highlight certain concepts important to the festival. free PDF’s of these readings, which will likely include essays by Deleuze & Guattari, Negarestani, and Brassier, will be available on our website after the artists are selected. while we will not be presenting on these readings or concepts, we will be moving the concepts, communally learning about and through them to build other possible structures/concepts/tactics.
+        </p>
+        <br />
+        <h3 class="fugu-h3">
+          logistics / economics
+        </h3>
+        <br />
+        <p>
+          as of right now (August), all guest artists will be provided a $500 stipend to attend. pending funding decisions in the fall, we are hoping to increase this stipend, though this is far from certain. we will also aim to provide a free homestay to each artist who needs one. certain meals will be provided by the festival (all others are the responsibility of the artist) and free coffee will be in constant supply at WSAC.
+        </p>
+        <br />
+        <h3 class="fugu-h3">
+          conclusion
+        </h3>
+        <br />
+        <p>
+          we are creating this festival as a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this can become a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
+        </p>
         <br />
         <br />
         <br />
