--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row text-center">
       <h2 class="">
-        With generous support from:
+        with generous support from:
       </h2>
       <br />
     </div>
