cds onto 2017 page

--- a/app/views/home/sections/_who2017.html.erb
+++ b/app/views/home/sections/_who2017.html.erb
@@ -192,6 +192,33 @@
         </p>
       </div>
     </div>
+    <br />
+    <br />
+    <div class="col-lg-12">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <h3>Or you can check out our full 2017 concerts</h3>
+        </div>
+      </div>
+      <br />
+      <div class="row text-center">
+        <div class="col-lg-4">
+          <a href="https://thecoincidencefestival.bandcamp.com/album/welcome-concert-2017" class="cd-links reddish" target="_blank">
+            Welcome Concert
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <a href="https://thecoincidencefestival.bandcamp.com/album/guest-artist-showcase-2017" class="cd-links reddish" target="_blank">
+            Guest Artist Showcase
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <a href="https://thecoincidencefestival.bandcamp.com/album/finale-marathon-concert-2017" class="cd-links reddish" target="_blank">
+            Finale Marathon Concert
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
   <br />
   <br />
