--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,9 @@
 <!--         <li>
           <a class="page-scroll" href="#about">About</a>
         </li> -->
-        <!-- <li>
-          <a class="page-scroll" href="/home/#application">APPLICATION</a>
-        </li> -->
+        <li>
+          <!-- <a class="" href="/application">APPLICATION</a> -->
+        </li>
         <li>
           <a class="page-scroll" href="2018-season">2018 SEASON</a>
         </li>
