--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -17,7 +17,7 @@
   background-color: white;
 }
 
-#application, #guest-artists {
+#application, #guest-artists, .notification {
   background-color: #337ab7;
 }
 
