--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'home/sections/notification' %>
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
 <%= render 'home/sections/intro2019' %>
