--- a/app/views/coincident_trois/new.html.erb
+++ b/app/views/coincident_trois/new.html.erb
@@ -13,30 +13,15 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="text-faded">
-          <!-- Fill out your application here. We are most interested in your project proposal for the festival. Our main advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material that will give us a better chance to get to know you as an artist. -->
-
-          Intro text here?? 
-
+          please see the homepage for details on festival activities, the application, and logistics.
         </p>
       </div>
-      <!-- <div class="col-md-6 text-center">
-        <p> timeline </p>
-        <p>
-          Due December 10th, 2016
-        </p>
-        <p>
-          Acceptance (or not) sent via e-mail December 15th, 2016
-        </p>
-        <p>
-          Confirmation of Attendance due December 20th, 2016
-        </p>
-      </div> -->
     </div>
     <br />
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="text-faded">
-          <h3>Important dates</h3>
+          <h3>important dates</h3>
         </p>
       </div>
     </div>
@@ -46,47 +31,23 @@
         <ul style="list-style: none;">
           <li>
             <p class="text-faded">
-              Applications due on November 1st, 2018, by 11:59 PM (EST)
+              applications due on sunday, oct 28, by 11:59 pm (est)
             </p>
           </li>
           <li>
             <p class="text-faded">
-              Acceptance (or not) sent via e-mail November 12th, 2018
+              acceptance (or not) sent via e-mail november 7th
             </p>
           </li>
           <li>
             <p class="text-faded">
-              Confirmation of Attendance due December 1st, 2018
+              confirmation of attendance due nov 21
             </p>
           </li>
         </ul>
       </div>
-      <!-- <div class="col-md-6">
-        <ul>
-          <li>
-            <p class="text-faded">
-              Arrive on January 11th, 2019 in the afternoon
-            </p>
-          </li>
-          <li>
-            <p class="text-faded">
-              Depart anytime on January 20th, 2019
-            </p>
-          </li>
-        <ul>
-      </div> -->
     </div>
   </div>
-
-<!--   <div class="container">
-    <div class="row text-center">
-      <a class="btn btn-primary btn-fugu" data-toggle="collapse" href="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
-        APPLICATIONS ARE CLOSED
-      </a>
-    </div>
-  </div> -->
-
-
   <div class="container" id="collapseExample"> 
     <br />
     <hr />
@@ -94,26 +55,26 @@
       <div class="row">
         <div class="col-md-6">
           <h3>
-            Personal Info (Required)
+            personal info (required)
           </h3>
           <p class="text-faded">
-            Please let us know who you are! Our main means of contact will be e-mail, so please check it (and your spam folder) regularly.
+            please let us know who you are! our main means of contact will be e-mail, so please check it (and your spam folder) regularly.
           </p>
-          <%= f.label :name, class: 'fugu-width' %>
+          <%= f.label :name, 'name', class: 'fugu-width' %>
           <%= f.text_field :name, class: 'form-control', :required => true %>
           <br />
 
-          <%= f.label :email, class: 'fugu-width m-5-top' %>
+          <%= f.label :email, 'email', class: 'fugu-width m-5-top' %>
           <%= f.text_field :email, class: 'form-control m-5-top', :required => true %>
         </div>
         <div class="col-md-6">
           <h3>
             &nbsp;
           </h3>
-          <%= f.label :birthday, :required => true, class: 'fugu-width m-5-top' %>
+          <%= f.label :birthday, 'birthday', :required => true, class: 'fugu-width m-5-top' %>
           <%= f.date_field :birthday, class: 'form-control m-5-top', :required => true %>
           <br />
-          <%= f.label :address, :required => true, class: 'fugu-width m-5-top' %>
+          <%= f.label :address, 'address', :required => true, class: 'fugu-width m-5-top' %>
           <%= f.text_area :address, class: 'form-control m-5-top', :required => true %>
         </div>
       </div>
@@ -122,22 +83,22 @@
       <div class="row">
         <div class="col-md-6">
           <h3>
-            Portfolio
+            portfolio
           </h3>
           <p class="text-faded">
-            *All documents should be linked to via resources like Dropbox and Google Drive. Make sure the documents are accessible to us to view.*
+            *all documents should be linked to via resources like dropbox and google drive. make sure the documents are accessible to us to view.*
           </p>
 
           <p class="text-faded">
-            You may provide 1 - 3 Work Samples, in whatever form/format you feel best represents you. To note: we only require 1 Work Sample, and the number of Work Samples you submit will not negatively affect application.
+            you may provide 1 - 3 work samples, in whatever form/format you feel best represents you. to note: we only require 1 work sample, and the number of work samples you submit will not negatively affect application.
           </p>
-          <%= f.label :link1, 'Work Sample 1, Link (Required)', class: ' m-5-top', :required => true %>
+          <%= f.label :link1, 'work sample 1, link (required)', class: ' m-5-top', :required => true %>
           <%= f.text_field :link1, class: 'form-control', :required => true %>
           <br />
-          <%= f.label :link2, 'Work Sample 2, Link (Optional)', class: ' m-5-top'  %>
+          <%= f.label :link2, 'work sample 2, link (optional)', class: ' m-5-top'  %>
           <%= f.text_field :link2, class: 'form-control m-5-top' %>
           <br />
-          <%= f.label :link3, 'Work Sample 3, Link (Optional)', class: ' m-5-top'  %>
+          <%= f.label :link3, 'work sample 3, link (optional)', class: ' m-5-top'  %>
           <%= f.text_field :link3, class: 'form-control m-5-top' %>
           <br />
         </div>
@@ -147,22 +108,17 @@
               &nbsp;
             </h3>
           </div>
-          
-          <p class="text-faded">
-            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your application.
-          </p>
-          <%= f.label 'Website (Optional)' %>
+          <%= f.label :website, "website (optional)" %>
           <%= f.text_field :website, class: 'form-control' %>
           <br />
           <p class="text-faded">
             
           </p>
-          <%= f.label :tell_us, "Please tell us about yourself: what have you been up to? what are you interested in? anything you want us to know?" %>
+          <%= f.label :tell_us, "please tell us about yourself: what have you been up to? what are you interested in? anything you want us to know?" %>
           <%= f.text_area :tell_us, class: 'form-control' %>
           <p class="text-faded">
-<!--             Lastly, let us know why are you interested in the festival? (can be brief) -->
           </p>
-          <%= f.label :why_ams_you, "Lastly, let us know why are you interested in the festival? (can be brief)" %>
+          <%= f.label :why_ams_you, "lastly, let us know why are you interested in the festival? (can be brief)" %>
           <%= f.text_area :why_ams_you, class: 'form-control' %>
         </div>
       </div>
@@ -171,13 +127,16 @@
       <div class="row">
         <div class="col-md-6">
           <h3>
-            Proposal
+            proposal
           </h3>
           <p class="text-faded">
-            what is a primary concept-of-interest for you? could you briefly describe your engagement with it and provide us, if possible, with a link to a passage or essay that articulates it well. (we hope to fold the guest artist concepts-of-interest into our daily discussions).
+            what is a recent concept-of-interest for you? could you briefly describe your engagement with it and provide us, if possible, a passage, essay, artwork, video, or otherwise that articulate it well. (we hope to fold the guest artist concepts-of-interest into our daily discussions).
           </p>
           <p class="text-faded">
-            this year, we will be dealing with conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. these are intended to be in service of collectively developing an ethic (or tactics) that is durable, yet malleable - something available for further and future use. part of this includes proposing various activity-pieces to occur during the festival. what would you propose for an activity (one or several)? this, of course, is not binding, and we don’t expect it to (but it might) be the activity you offer at the festival.
+            this year, we will be dealing with conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. these are intended to be in service of collectively developing an ethic (or tactics) that is durable, yet malleable - something available for further and future use. part of this includes proposing various activity-pieces to occur during the festival. 
+          </p>
+          <p class="text-faded">
+            what would you propose for an activity (one or several)? describe it and why you think it is interesting/significant both to our future group/social operations at the festival and your work. this, of course, is not binding, and we don’t expect it to (but it might) be the activity you offer at the festival.
           </p>
 
         </div>
@@ -185,7 +144,7 @@
           <h3>
             &nbsp;
           </h3>
-          <%= f.label 'Link to your response to the prompt', :required => true, class: ' m-5-top' %>
+          <%= f.label :link_to_prompt, 'link to your response to the prompt', :required => true, class: ' m-5-top' %>
           <%= f.text_field :link_to_prompt, class: 'form-control form2', :required => true %>
 
           <br />
