--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           <a class="page-scroll" href="#about">About</a>
         </li> -->
         <li>
-          <!-- <a class="" href="/application">APPLICATION</a> -->
+          <a class="" href="/application">APPLICATION</a>
         </li>
         <li>
           <a class="page-scroll" href="2018-season">2018 SEASON</a>
