Add Joachim to the 2018 artist page

--- a/app/views/home/sections/_guest_artists_2018.html.erb
+++ b/app/views/home/sections/_guest_artists_2018.html.erb
@@ -11,6 +11,31 @@
   <br />
   <br />
   <div class="container guest-artists">
+      <!-- joachim goes here -->
+      <div class="row guest-artist-row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="guest-artist-img">
+            <%= image_tag asset_url("joachim.jpg")%>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Joachim Eckl (Resident Artist)", "http://www.heimart.at/index.php/joachim-eckl.html", :target => "_blank" ) %>
+          </h4>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs">
+          <p class="text-faded">
+          Joachim Eckl (Austria) lives and works in Unternberg near Neufelden at the river Große Mühl which is situated in the Mühlviertel, an area steeped in history and of powerful nature. His ancestors were millers working in the Berndlmühle upstream in Aigen-Schlägl. Through generations the family obtained power and energy from the Große Mühl. At first the energy was used to grind grain in the mills; after that for generating power in the power station. In 1902, his great-grandfather erected the first hydroelectric power station at the Große Mühl to “bring light to town”.
+        </p>
+        <p class="text-faded">
+          Joachim Eckl was born and brought up in 1962 in Haslach. The relation to his country and culture as well as the local particularities became important for Eckl after he returned from studying in New York in 1989. His commitment and work is based on the conviction and knowledge that the achievements of the 20th century entailed progress but also an immoderate carelessness: for Eckl, the time has come to return something to the river and the region. After his studies of psychology in Austria and New York, Eckl has worked for over 20 years in various positions and roles in the art world. In parallel to the realization of over 100 of his own projects, he was part of the implementation of the large-scale projects of Tony Cragg, Jeff Koons, Christo & Jean Claude, and Klaus Rinke. Eckl currently works as a freelance artist under the label HEIM.ART® in “Der Station—Neufelden” and as part of international projects. Run by Eckl, “Die Station—Neufelden”, the former warehouse on the Große Mühl, has been used as an art space for over 10 years. 
+        </p>
+        <p class="text-faded">
+          Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water plays a central role in this work: Eckl understands and uses it as basic element of human interaction. His project 'river-to-river' currently brings together rivers and people from all over the world, generating social warmth. In the years 2008—2009, he realized projects in Austria, the Czech Republic, Germany, Great Britain, Egypt, Zambia, and Zimbabwe.
+        </p>
+        </div>
+      </div>
+      <hr class="secondary">
 
       <!-- amy golden -->
       <div class="row guest-artist-row">
