--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -85,11 +85,11 @@
               <%= link_to coincident.link_to_prompt, "http://#{coincident.link_to_prompt}", :target => "_blank" %>
             </td>
             <td>
-              <%= coincident.link1 %>
+              <%= link_to(coincident.link1, "http://#{coincident.link1}", :target => "_blank" ) %>
               <br />
-              <%= coincident.link2 %>
+              <%= coincident.link2 != '' ? link_to(coincident.link2, "http://#{coincident.link2}", :target => "_blank") : '-' %>
               <br />
-              <%= coincident.link3 %>
+              <%= coincident.link3 != '' ? link_to(coincident.link3, "http://#{coincident.link3}", :target => "_blank") : '-' %>
             </td>
             <td>
               <%= coincident.instruments %>
