--- a/app/views/admin/show2.html.erb
+++ b/app/views/admin/show2.html.erb
@@ -73,11 +73,11 @@
               <%= link_to coincident.link_to_prompt, "http://#{coincident.link_to_prompt}", :target => "_blank" %>
             </td>
             <td>
-              <%= link_to(coincident.link1, "http://#{coincident.link1}", :target => "_blank" ) %>
+              <%= coincident.link1 %>
               <br />
-              <%= coincident.link2 != '' ? link_to(coincident.link2, "http://#{coincident.link2}", :target => "_blank") : '-' %>
+              <%= coincident.link2 %>
               <br />
-              <%= coincident.link3 != '' ? link_to(coincident.link3, "http://#{coincident.link3}", :target => "_blank") : '-' %>
+              <%= coincident.link3 %>
             </td>
             <td>
               <%= coincident.how_did_you_hear %>
