changes up donate section

--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -30,7 +30,7 @@
         </p>
         <br />
         <p>
-          if you would like to support <i> co-incidence </i> please donate to <a href="http://nonevent.org/membership/" target="_blank"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
+          if you would like to support <i> co-incidence </i> please mail checks to 134 Highland Ave, Apt. 3, Somerville MA 02143, made out to Co-Incidence, Inc.
         </p>
         <br />
         <br />
