more donation stuff

--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -1,28 +1,51 @@
-<section id="logos" style="padding: 15px 0 35px 0;">
+<section id="logos">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <h2 class="section-heading fugu-h3">
+          SUPPORT
+        </h2>
+        <hr class="primary">
+        <p>
+          For tax deductible donations, please mail a check made out to CO-INCIDENCE, INC. to:
+        </p>
+        <br />
+        <p>
+          Co-Incidence, Inc.
+          <br />
+          C/o Luke Martin
+          <br />
+          134 Highland Ave, Apt 3
+          <br />
+          Somerville, MA 02143
+        </p>
+      </div>
+    </div>
+    <br />
     <div class="row text-center">
-      <h2 class="">
+      <h3 class="">
         with generous support from:
-      </h2>
+      </h3>
       <br />
     </div>
     <div class="row text-center">
-        <div class="business-logo">
-            <%= image_tag asset_url("business-logos/Amphion4.png") %>
-        </div>
-        <div class="business-logo">
-          <%= image_tag asset_url("business-logos/bcc.jpg") %>
-        </div>
+
+<!--         <div class="business-logo">
+            <%#= image_tag asset_url("business-logos/Amphion4.png") %>
+        </div> -->
+<!--         <div class="business-logo">
+          <%#= image_tag asset_url("business-logos/bcc.jpg") %>
+        </div> -->
         
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/cafefixe.png") %>
         </div>
-        <div class="business-logo">
-            <%= image_tag asset_url("business-logos/austrian-logo.png") %>
-        </div>
-        <div class="business-logo">
-          <%= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
-        </div>
+<!--         <div class="business-logo">
+            <%#= image_tag asset_url("business-logos/austrian-logo.png") %>
+        </div> -->
+<!--         <div class="business-logo">
+          <%#= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
+        </div> -->
         <div class="business-logo">
           <%= image_tag asset_url("MCC_Logo.png") %>
         </div>
