--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,6 +38,9 @@
         <li>
           <a class="page-scroll" href="/home/#about">about</a>
         </li>
+        <li>
+          <a class="page-scroll" href="/home/#logos">SUPPORT</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
