--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,7 @@
 <%#= render 'home/sections/application2' %>
 
 <%#= render 'home/sections/guest_artists_2018' %>
+<%= render 'home/sections/guest_artists_2019' %>
 
 <%= render 'home/sections/about' %>
 <%= render 'home/sections/logos' %>
