--- a/app/views/home/sections/_guest_artists_2019.html.erb
+++ b/app/views/home/sections/_guest_artists_2019.html.erb
@@ -15,7 +15,7 @@
     <div class="row guest-artist-row">
       <div class="col-xs-12 col-sm-3">
         <div class="guest-artist-img">
-          <%= image_tag asset_url("twenty19/jar_performance.jpeg")%>
+          <%= image_tag asset_url("twenty19/jar_performance.jpg")%>
         </div>
       </div>
       <div class="col-xs-12 col-sm-9 centered-xs guest-link">
